--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #mySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/school?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Starwars470015.
+spring.datasource.password=root
 #server.port=8080
 
 #Hibernate
